<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.rakib.app_scheduler_pro.model.Schedule" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_marginEnd="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_min"
        app:cardCornerRadius="@dimen/radius_mid">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_mid">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_logo" />

                <LinearLayout
                    android:id="@+id/scheduledItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/appName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{model.appName}"
                        android:textSize="@dimen/text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/packageName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{model.packageName}"
                        android:textSize="@dimen/text" />

                    <TextView
                        android:id="@+id/scheduledDateTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{model.scheduleTimeInWord}"
                        android:textSize="@dimen/text" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>